Update Chat Application

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   const username = document.getElementById('username-input').value.trim();
   if (username) {
     localStorage.setItem('username', username);
-    window.location.href = '/chat.html';
+    window.location.href = 'chat.html';
   } else {
     alert('Please enter a username');
   }
